<resources>
    <string name="app_name">පොළ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Navigation drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_profle">Profile</string>
    <string name="menu_order">Search Placed orders</string>
    <string name="menu_contact">Contact Us</string>
    <string name="hi">Hello</string>

    <!--Home page -->
    <string name="fruit1name">Banana</string>
    <string name="fruit1price">Rs.50/= per 1kg</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="number">0</string>
    <string name="fruit2name">Mango</string>
    <string name="fruit2price">Rs.100/= per 1kg</string>
    <string name="fruit3name">Pineapple</string>
    <string name="fruit3price">Rs.150/= per 1kg</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>

    <!--Customer-->
    <string name="name">Enter name</string>


    <!--Shipping -->
    <string name="title">Shipping Address</string>
    <string name="fist_Name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="phone_no">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>

    <!--Edit cart -->
    <string name="productname">Product Name</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--Search order -->
    <string name="order_id">Your order Id is </string>
    <string name="total_price">Total price Rs.</string>
    <string name="Rs">/=</string>

    <!--Payment -->
    <string name="paymenttitle">Credit/Debit Card</string>
    <string name="cardno">Card Number</string>
    <string name="paymentdesc">Save Card. I acknowledge that my card information is saved in my පොළ account for</string>
    <string name="btn_submit">Pay Now</string>

    <!--Contact us -->
    <string name="contact">Contact Us</string>
    <string name="Address">Address : </string>
    <string name="companyaddress">No 112/B, Katugasthota road, Mahaiyawa</string>
    <string name="teleno">0812111255</string>
    <string name="emailn">Email : </string>
    <string name="email">pola@gmail.com</string>
    <string name="fb">Facebook : </string>
    <string name="facebook">https://www.facebook.com/pola</string>
    <string name="tele">Telephone Number : </string>

    <!--search order id -->
    <string name="search">Order ID</string>
    <string name="itemname">Item</string>

    <!--sign out -->
    <string name="signout">Sign out</string>

    <!--spinner of cart -->
    <string-array name="city_array">
        <item>Kandy</item>
        <item>Suduhumpala</item>
        <item>Asgiriya</item>
        <item>Mulgampala</item>
        <item>Peradeniya</item>
        <item>Katugasthota</item>
        <item>Mahaiyawa</item>
        <item>Lewalla</item>
    </string-array>

    <string-array name="items">
        <item>Vegitable</item>
        <item>Fruit</item>
        <item>Animal Product</item>

    </string-array>

    <string name="buttonadd">Add</string>
    <string name="chekout">CheckOut</string>
    <string name="btnUpload">Upload</string>
    <string name="Confirmbtn">Confirm</string>
    <string name="updatebtn">Update</string>
    <string name="phone">Enter Phone</string>
    <string name="inputEmail">Enter Email</string>
    <string name="pwd">Enter Password</string>


</resources>