<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity.Shipping">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        app:layout_constraintBottom_toTopOf="@+id/tvtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/topic_font"
        app:layout_constraintBottom_toTopOf="@+id/etfirstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogo" />

    <EditText
        android:id="@+id/etfirstname"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:ems="10"
        android:hint="@string/fist_Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etlastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle" />

    <EditText
        android:id="@+id/etlastname"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etshippingaddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etfirstname" />

    <EditText
        android:id="@+id/etshippingaddress"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/street_address"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/city_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etlastname" />

    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        app:layout_constraintBottom_toTopOf="@+id/edcontact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etshippingaddress" />

    <EditText
        android:id="@+id/edcontact"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_spinner" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@color/button"
        android:backgroundTint="@color/button"
        android:onClick="OnClickinsertShipping"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edcontact" />

</androidx.constraintlayout.widget.ConstraintLayout>