<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".model.Editcart">

    <Button
        android:id="@+id/btnconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="171dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cart" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="403dp"
        android:layout_height="253dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnconfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvItem"
                android:layout_width="51dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:text="@string/productname"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout7">

            <TextView
                android:id="@+id/tvunits"
                android:layout_width="76dp"
                android:layout_height="44dp"
                android:text="@string/unit"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/tvprice"
                android:layout_width="76dp"
                android:layout_height="46dp"
                android:text="@string/price"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="3dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout8">

            <TextView
                android:id="@+id/tvedit"
                android:layout_width="79dp"
                android:layout_height="50dp"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout6">

            <TextView
                android:id="@+id/tvdelete"
                android:layout_width="89dp"
                android:layout_height="42dp"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:layout_editor_absoluteY="4dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>